Fix admin notifications table overflow

--- a/src/web/app/pages-admin/admin-notifications-page/notifications-table/notifications-table.component.scss
+++ b/src/web/app/pages-admin/admin-notifications-page/notifications-table/notifications-table.component.scss
@@ -36,3 +36,11 @@
 .padding-left-7px {
   padding-left: 7px;
 }
+
+.col-12 {
+  overflow-x: scroll;
+
+  #notifications-table {
+    min-width: 650px;
+  }
+}
